するほき修正

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -160,7 +160,7 @@
                     <option value="group_ether">エーテル結合 (-O-)</option>
                     <option value="group_ester">エステル結合 (-COO-)</option>
                     <option value="group_nh2">アミノ基 (-NH₂)</option>
-                    <option value="group_so3h">スルホン酸基 (-SO₃H)</option>
+                    <option value="group_so3h">スルホ基 (-SO₃H)</option>
                     <option value="group_amide">アミド基 (-NHCO-)</option>
                     <option value="group_nitro">ニトロ基 (-NO₂)</option>
                 </optgroup>
